--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+#EXTM3U 
 
-# Other files and folders
-.settings/
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+#EXTINF:-1 
+tvg-logo="https://www.amica.it/wp-content/uploads/2020/04/preview-1-635x941.jpg?v=1234", Episodio 1 https://videos-5cdcda58.cdn.integros.com/videos/7SRbb5ZAC9Mh6Tvu6aHFcC/mp4/480.mp4
